# backend

./: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml  readme.md
app/: __main__.py  config.py  elastic.py  main.py  schemas.py  server.py
app/database/: __init__.py  engine.py  session.py
app/database/models/: __init__.py  links.py  order.py  product.py  session.py  user.py  verify.py
app/database/repositories/: __init__.py  base.py  order.py  product.py  session.py  user.py  verify.py
app/middleware/: auth.py  deps.py
app/routers/: auth.py  orders.py  products.py  users.py
app/schemas/: auth.py  order.py  product.py  products.py  user.py
app/utils/: auth.py
deploy/: Dockerfile  docker-compose.yml
libs/database/: __init__.py  engine.py
libs/database/models/: __init__.py  links.py  order.py  product.py  session.py  user.py  verify.py
libs/database/repositories/: __init__.py  base.py  order.py  product.py  session.py  user.py  verify.py
libs/elastic/: client.py  repository.py
