[tool.poetry]
name = "quantum"
version = "0.1.0"
description = ""
authors = ["Ultard <glebpozbnakov62@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.3"}
uvicorn = "^0.32.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
sqlmodel = "^0.0.22"
pydantic-settings = "^2.6.0"
yarl = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
